eks/ingress-nginx.yaml
#apiVersion: networking.k8s.io/v1
#kind: IngressClass
#metadata:
#  name: nginx
#spec:
#  controller: k8s.io/ingress-nginx
#---
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: simple-bank-ingress
#  annotations:
#    cert-manager.io/cluster-issuer: letsencrypt
#spec:
#  ingressClassName: nginx
#  rules:
#    - host: "test.api.hanetcamera.com"
#      http:
#        paths:
#          - pathType: Prefix
#            path: "/"
#            backend:
#              service:
#                name: simple-bank-api-service
#                port:
#                  number: 80
#  tls:
#    - hosts:
#        - test.api.hanetcamera.com
#      secretName: simple-bank-api-cert

apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
