eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-bank-api-service
# we must define a pod selector rule, so that the service can find the set of pods to route the traffic to.
spec:
  selector:
    app: simple-bank-api
  ports:
    - protocol: TCP
      # Then, 80 is the port, on which the service will listen to incoming requests.
      # the target port is the port of the container. Where the requests will be sent to.
      port: 80
      targetPort: http-server
      name: http-service
    - protocol: TCP
      port: 90
      targetPort: grpc-server
      name: grpc-service
  # ClusterIP means don't want to expose to outside
  type: ClusterIP
