eks/ingress-grpc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-bank-ingress-grpc
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    # There is 1 annotation for the SSL  redirect, which should be set to “true”
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # And another annotation for the backend  protocol, which should be “GRPC”
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  ingressClassName: nginx
  rules:
    - host: "test.gapi.hanetcamera.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: simple-bank-api-service
                port:
                  number: 90
  tls:
    - hosts:
        - test.gapi.hanetcamera.com
      secretName: simple-bank-gapi-cert
